<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UserProfiles</string>
    <string name="take_photo">Take Photo</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="new_user">New User</string>
    <string name="name">Name: </string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="new_line">\n</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="chose_image">Choose Image</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="empty_fields">Name and Image must not be empty!</string>

</resources>